# spotify-client

./: Cargo.toml  configuration.yaml
src/: auth.rs  configuration.rs  lib.rs  main.rs  search.rs  startup.rs
src/routes/: mod.rs  user.rs
